2011-11-18 Daniel Alder <dalder@snowflake.ch>

	* Prepare for 'groups'
	* Add 'Whitelisted Extension' to settings

2011-11-17 Daniel Alder <dalder@snowflake.ch>

	* Add XLIFF support in indexing
	* Fix bug in xml sync
	* Switch extension state to stable
	* Add requirement for typo3 4.5 and above
	* Add new manual
	* Small manual update
	* Update dependency to correct version 4.5.4
	* Usability fix: Button on settings form on every tab

2011-11-11 Daniel Alder <dalder@snowflake.ch>

	* Add backward compatibility for llxml
	* Remove unused performance-debug-functions

2011-10-31 Daniel Alder <dalder@snowflake.ch>

	* Add XLIFF files to snowbabel
	* Add new extdirect confs

2011-07-16 Daniel Alder <dalder@snowflake.ch>

	* Added some small bug fixes
	* Added experimental cache
	* Cleanup changelog

2011-04-05 Daniel Alder <dalder@snowflake.ch>

	* initial release (basic features)