@@ -1,3 +1,7 @@
+2011-11-21 Daniel Alder <dalder@snowflake.ch>
+
+	* Add 'Whitelisted Extension' to indexing
+
 2011-11-18 Daniel Alder <dalder@snowflake.ch>
 
 	* Prepare for 'groups'
